# Reminders

./: .gitignore  README.md
Console/: CMakeLists.txt  README.md  Runner.cpp  Runner.h  dbhandler.cpp  dbhandler.h  main.cpp
RDB/: RDB.pro  entry.h  rdb.cpp  rdb.h
ReminderQt/: .gitignore  CMakeLists.txt  main.cpp
ReminderQt/DataProvider/: DataEntry.cpp  DataEntry.h  DataProvider.cpp  DataProvider.h  DbProviderImpl.cpp  DbProviderImpl.h  FileProviderImpl.cpp  FileProviderImpl.h  ISTLProvider.cpp  ISTLProvider.h  QtDataProvider.h  data_sample
ReminderQt/Qt/: moc_addentry.cpp  moc_checkpassword.cpp  moc_remainderdlg.cpp  ui_addentry.h  ui_checkpassword.h  ui_editentry.h  ui_remainderdlg.h
ReminderQt/UI/: CMakeLists.txt  Reminder.pro  addentry.cpp  addentry.h  addentry.ui  checkpassword.cpp  checkpassword.h  checkpassword.ui  main.cpp  remainderdlg.cpp  remainderdlg.h  remainderdlg.ui
filerdp/: entry.cpp  entry.h  entrytype.h  filehandler.cpp  filehandler.h  filerdp.pro  rdb.cpp  rdb.h
ndp/: main.cpp  ndp.pro  server.cpp  server.h  session.cpp  session.h
rdpclient/: rdpclient.cpp  rdpclient.h  rdpclient.pro
reminder-test/: main.cpp  rdb  rdb.just_in_case  reminder-test.pro
rest-reader/: main.cpp
